--- a/index.Rmd
+++ b/index.Rmd
@@ -11,9 +11,9 @@ This page discusses work devoted to improving our calculation of population immu
 
 This algorithm should have the follow properties:
 
-  1. Responsiveness - population immunity should respond immediately following a campaign.
-  2. Capability for small area estimates - one of the advantages of our current smoothing approach is that we are able to estimate immunity at the district-level and relate this to cases.
-  3. Easy to manipulate - inputs should be explicit so that hypothetical populations, accessibility structures, and campaign calendars can be readily evaluated.
+  1. **Responsiveness** - population immunity should respond immediately following a campaign.
+  2. **Aplicability to small area estimates** - one of the advantages of our current smoothing approach is that we are able to estimate immunity at the district-level and relate this to cases.
+  3. **Easy to manipulate** - inputs should be explicit so that hypothetical populations, accessibility structures, and campaign calendars can be readily evaluated.
   
 ###Immunity Calculation 1.0
 
@@ -21,5 +21,20 @@ Currently, our best approach allows immunity calculation in six-month periods. T
 
   1. For each NP-AFP case aged 6-59 months, make onset date equal to the end date of the six-month period they reported AFP, then adjust birth date so that age is unchanged.
   2. Estimate the campaign exposure based on campaigns occuring in district of onset within adjusted birth and onset dates.
-  3. Estimate the individual probability of protection using reported OPV doses, campaign exposure, and dose efficacies (described here: <http://amupfill.github.io/IPV_Immunity_Calculation/#immunity-calulcation-function>)
-  4. 
+  3. Estimate the individual probability of protection using reported OPV doses, campaign exposure, and dose efficacies (described [here](<http://amupfill.github.io/IPV_Immunity_Calculation/#immunity-calulcation-function>)).
+  4. Use a Bayesian heirarchical temporal model (see below), we estimate 'smoothed' district level immunity. This step is important as it reduces noise arising from the small NP-AFP sample size at the district-level.
+  $$
+  \begin{align}
+    I_{ijt} &\sim \text{N}\left(X_{ijt},  \frac{\sigma^{2}}{n_{ijt}}\right)\\
+    X_{ijt} &= \alpha + P_{1i} + P_{1it} + D_{1ij} + D_{1ijt}
+  \end{align}
+  $$
+  Where $X_{ijt}$ is the immunity estimate in district $j$ in province $i$ in time period $t$. $I_{ijt}$ is the unadusted immunity estimate from that period and $n_{ijt}$ is the number of NP-AFP cases on which that estimate is based.
+  
+This approach meets criterion 1 and 2 in the list in the introduction, it fails miserably with regard to property 3. In this approach, campaign coverage & accessibility are not modeled explicitly and so therefore cannot be adjusted easily. The hope is that version 2.0 will make the different underlying concepts of the immunity calculation easy to observe and manipulate.
+
+###A Path Forward
+
+All immunity calculators will require model estimates of campaign coverage from NP-AFP (there are other data sources for campaign coverage--LQAS, IM--but NP-AFP is the most universal dataset) in some form or another.
+
+Hil has previously a method for infering campaign coverage in two accessibility groups from NP-AFP, and then combining this with the historical campaign calendar to reconstruct immunity in a location.
